# neon-chinese-clip

./: .gitignore  Dockerfile  LICENSE.md  README.md  dev.sh  gunicorn.conf.py  pyproject.toml
app/: __init__.py  main.py  service_dependencies.py
app/endpoints/: __init__.py  clip_routes.py  routes.py
app/errors/: exception_handles.py
app/schemas/: __init__.py  vector.py
app/services/: __init__.py  clip_vector.py
core/: __init__.py  cn_clip.py  exceptions.py  log_config.py
